# ctcp

./: -  .gitignore  AGENTS.md  APPLY_OVERLAY.md  BUILD.md  CMakeLists.txt  LICENSE  PATCH_README.md  README.md  TREE.md  _tmp_final_patch.diff  _tmp_final_user.diff  _tmp_final_user_small.diff  analyze_test_results.py  build_v6.cmd  diff.patch  final_output.patch  final_patch_out.diff  patch_debug.txt  read_test_results.py  test_final.py  test_support_flow.py  test_support_flow_fixed.py  test_support_flow_simple.py
.claude/: settings.local.json
PATCHES/: 20260219-failure-closure-loop.patch  20260219-foundation-plan-queue.patch  20260219-p0-performance-slice.patch  20260219-teamnet-dispatch.patch  teamnet_adlc_execution_skeleton.patch
agent_league_cases/: customer_persona_case.json  delivery_checklist.json  product_review_checklist.json  qa_checklist.json
ai/: AGENT_PROTOCOL.md  PLAYBOOK.md
ai_context/: 00_AI_CONTRACT.md  CTCP_FAST_RULES.md  decision_log.md  keywords.yaml  problem_registry.md  problem_registry_index.json
artifacts/: EXPECTED_RESULTS.md  PLAN.md  REASONS.md  TRACE.md  ZIP_SUMMARY.txt  _s16_local_run_dir.txt  _simlab_lite_debug10_summary.json  _simlab_lite_debug11_summary.json  _simlab_lite_debug2_summary.json  _simlab_lite_debug3_summary.json  _simlab_lite_debug4_summary.json  _simlab_lite_debug5_summary.json  _simlab_lite_debug6_summary.json  _simlab_lite_debug7_summary.json  _simlab_lite_debug8_summary.json  _simlab_lite_debug9_summary.json  _simlab_lite_debug_summary.json  _virtual_delivery_e2e_check.json  _vtuber_highlight_demo_output.json  benchmark_output_quality_report.md  benchmark_output_quality_runs.json  delivery_evidence_simlab.json  diff.patch  mainline_freeze_manifest.json  plan_scope_budget_inventory.json  simlab_lite_debug.json  simlab_vtuber_debug.json  test_analysis.json  test_flow_analysis.md  test_output_1.txt  test_step_1_output.txt  test_step_1_session.json  test_step_2_output.txt  test_step_2_session.json  test_step_3_output.txt  test_step_3_session.json  test_step_4_output.txt  test_step_4_session.json  verify_report.json
bridge/: __init__.py  event_append.py  render_adapter.py  snapshot_builder.py  state_store.py
build_lite/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ctcp.sln  ctcp_headless.vcxproj  ctcp_headless.vcxproj.filters
build_verify/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ctcp.sln  ctcp_headless.vcxproj  ctcp_headless.vcxproj.filters  install_manifest.txt
contracts/: __init__.py  agent_manifest.schema.json  allowed_changes.yaml  enums.py  file_manifest.schema.json  file_task.schema.json  frontend_session_contract.md  librarian_context_pack.schema.json  librarian_experience_record.schema.json  library_usage_verification.schema.json  model_budget.schema.json  module_freeze.json  project_capability_bundles.json  project_domain_matrix.json  project_library_plan.schema.json  retrieval_trace.schema.json  support_whiteboard_contract.md  validation.py  version.py
ctcp_adapters/: agent_exchange_prompt.py  analysis_md_normalizer.py  ctcp_artifact_normalizers.py  dispatch_request_mapper.py  dispatch_whiteboard.py  project_generation_plan_request.py  source_generation_prompt.py
ctcp_cos_user_v2p_taskpack/: 00_USE_THIS_PROMPT.md  01_ACCEPTANCE.md  OPTIMIZE_PLAYBOOK.md
ctcp_pointcloud_concrete_impl_taskpack/: 00_USE_THIS_PROMPT.md  README.md  TEMPLATE_DIFF_GUIDE.md
ctcp_pointcloud_full_project_taskpack/: 00_USE_THIS_PROMPT.md  01_ACCEPTANCE.md  OPTIMIZE_PLAYBOOK.md
ctcp_v2p_fixture_clean_taskpack/: 00_USE_THIS_PROMPT.md  01_ACCEPTANCE.md
docs/: 00_CORE.md  00_overview.md  01_architecture.md  01_north_star.md  02_workflow.md  03_quality_gates.md  04_execution_flow.md  04_project_detection.md  05_agent_mode_matrix.md  05_navigation.md  06_graph_map.md  07_layout_and_views.md  08_summary_drilldown.md  10_REGISTRY.md  10_team_mode.md  10_workflow.md  11_task_progress_dialogue.md  11_webengine_resources.md  12_modules_index.md  12_virtual_team_contract.md  13_agent_exchange_contract.md  13_contracts_index.md  14_persona_test_lab.md  15_performance_rules.md  16_visual_rules.md  17_interactions.md  18_back_and_preview.md  19_lod_rendering.md  20_STATE_MACHINE.md  20_backend_bridge.md  20_conventions.md  21_paths_and_locations.md  21_redundancy_guardrails.md  22_agent_teamnet.md  22_teamnet_adlc.md  25_project_plan.md  30_artifact_contracts.md  40_reference_project.md  (+22 more)
generated_projects/vtuber_highlight_local_mvp/: README.md  TESTING.md  pyproject.toml  run_demo.py
generated_projects/vtuber_highlight_local_mvp/config/: default_config.json
generated_projects/vtuber_highlight_local_mvp/delivery/: DELIVERY_SUMMARY_ZH.md  IMPLEMENTATION_PROCESS_ZH.md
generated_projects/vtuber_highlight_local_mvp/demo_assets/: sample_vtuber_replay.keywords.txt
generated_projects/vtuber_highlight_local_mvp/output/demo_run/: candidates.csv  candidates.json  report.html
generated_projects/vtuber_highlight_local_mvp/src/vtuber_highlight_mvp/: __init__.py  cli.py  config.py  detection.py  keywords.py  media.py  models.py  pipeline.py  reporting.py
generated_projects/vtuber_highlight_local_mvp/tests/: test_pipeline.py
generated_projects/vtuber_highlight_local_mvp/tools/: generate_demo_assets.py  generate_demo_evidence.py
(+2080 files in other folders)
