[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtuber-highlight-local-mvp"
version = "0.1.0"
description = "Local MVP for detecting VTuber high-energy highlight clips from replay videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
